[metadata]
name = quantutils-Piotr-Mikler
version = 0.0.1
author = Piotr Mikler
author_email = piotr.mikler1997@gmail.com
description = Quantitative finance utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PiotMik/quantutils
project_urls =
    Bug Tracker = https://github.com/PiotMik/quantutils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src